--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,8 @@ javac.classpath=\
     ${file.reference.flatlaf-3.2.1.jar}:\
     ${file.reference.flatlaf-intellij-themes-3.2.1.jar}:\
     ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mariadb-java-client-3.2.0.jar}
+    ${file.reference.mariadb-java-client-3.2.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
